see rock, paper, scissor buttons. Problem registering choice

--- a/views/player_make_choice.erb
+++ b/views/player_make_choice.erb
@@ -1,1 +1,5 @@
-"Rock", "Paper", "Scissors"
+Let us play
+
+<button type="button">Rock</button>
+<button type="button">Paper</button>
+<button type="button">Scissors</button>
