working game! needs refinement/refactoring

--- a/views/player_make_choice.erb
+++ b/views/player_make_choice.erb
@@ -6,6 +6,6 @@
 
 <form action="/play" method="POST">
   <% choices.each do |choice| %>
-    <button class="btn" name="pick" value=<%= choice.to_s %>><%= choice.to_s %></button>
+    <button class="btn" name="pick" value=<%= choice %>><%= choice %></button>
   <% end %>
 </form>
