--- a/views/show_result.erb
+++ b/views/show_result.erb
@@ -1,7 +1,7 @@
 <h1>Game Result</h1>
 
-<h2> You chose <%= @pick%> </h2>
+<h2> <%= @my_name %> chose <%= @my_choice %> </h2>
 
-<h3>Computer chose <%= @computer_pick %> </h3>
+<h3> <%= @opponent_name %> chose <%= @opponent_choice %> </h3>
 
-<h1><%= @result %> </h1>
+<h1> Winner is<%= @winner %> </h1>
