Fix names on make choice page

--- a/views/player_make_choice.erb
+++ b/views/player_make_choice.erb
@@ -1,6 +1,6 @@
 <%require_relative '../lib/game.rb' %>
 
-<h1> <%= @player %> is playing <%= @computer %> </h1>
+<h1> <%= @player.name %> is playing <%= @computer.name %> </h1>
 <h3> Let us play - make a choice </h3>
 
 
